--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
-
-<!--     <script src="lib/jquery/src/jquery.js"></script>
- -->
     <script src="app/app.js"></script>
     <script src="app/homescreen/homescreen.js"></script>
     <script src='app/filter/filter.js'></script>
@@ -97,12 +94,18 @@
                         <span class="forcastedDescription"></span>
                       </div>
                     </div>
+                <div id="featureContent1"  ng-show="tab1">
+                  <h3>Just a place holder for your awesome contents3</h3> 
                 </div>
                 <div id="featureContent2" ng-show="tab2">
                   <h3>Just a place holder for your awesome contents2</h3>
                 </div>
                 <div id="featureContent3" ng-show="tab3">
                   <h3>Just a place holder for your awesome contents3</h3> 
+                </div>
+                <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
+                  <div ng-bind-html="textArea"></div>  
+                  <h3>Just a place holder for your awesome contents4</h3> 
                 </div>
                 <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
                   <div ng-bind-html="textArea"></div>  
