(species) add in species, styles, ngsanitize, bower.json additgion

--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
         <div ng-show="searchStatus" id="detailDisplay">
-          <span id="logo"> LOGO </span>
+           <span id="logo"> <img src="assets/logo.png"/> </span>
           <div id="totalContainer">
             <span id="filterMapContainer" ng-controller="filterController">
               <div id="filterContainer" > <!--Removed Dash from NG_controller-->
@@ -73,7 +73,7 @@
                     <li class="navbarLi" ng-click="reset(); tab1 = !tab1">Current Weathers</li>
                     <li class="navbarLi" ng-click="reset(); tab2 = !tab2">Forecast</li>
                     <li class="navbarLi" ng-click="reset(); tab3 = !tab3">Reviews</li>
-                    <li class="navbarLi" ng-click="reset(); tab4 = !tab4">New Features1</li>
+                    <li class="navbarLi" ng-click="reset(); tab4 = !tab4">Wildlife</li>
                     <li class="navbarLi" ng-click="reset(); tab5 = !tab5">New Features2</li>
                   </ul>
                 </div>
