from current branch (#31)
(feat) add species

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvP71A4zQ3bBjri75-1y6AaLP3s-JfNO0&libraries=places"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
     <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 
 <!--     <script src="lib/jquery/src/jquery.js"></script>
  -->
@@ -18,7 +19,8 @@
     
     <script src='app/filter/filter.js'></script>
     <script src='app/description/description.js'></script>
-	   <script src="app/services/services.js"></script>
+     <script src="app/services/services.js"></script>
+     <script src="app/species/species.js"></script>
     <script src="assets/park_category.js"></script>
     <script src="app/weather/weather.js"></script>
     <script src="app/toggleNavbar/toggleNavbar.js"></script>
@@ -37,7 +39,7 @@
         </div>
       </div>
         <div ng-show="searchStatus" id="detailDisplay">
-          <span id="logo"> LOGO </span>
+           <span id="logo"> <img src="assets/logo.png"/> </span>
           <div id="totalContainer">
             <span id="filterMapContainer" ng-controller="filterController">
               <div id="filterContainer" > <!--Removed Dash from NG_controller-->
@@ -54,8 +56,8 @@
                   </ul>
                 </div>
               </div>
-              <div id="mapHolder" ngcontroller="mapsController">
-                <span id="mapButton" ng-click="toggleSize($event)">+</span>
+              <div id="mapHolder">
+                <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
                 
               </div>
@@ -71,7 +73,7 @@
                     <li class="navbarLi" ng-click="reset(); tab1 = !tab1">Current Weathers</li>
                     <li class="navbarLi" ng-click="reset(); tab2 = !tab2">Forecast</li>
                     <li class="navbarLi" ng-click="reset(); tab3 = !tab3">Reviews</li>
-                    <li class="navbarLi" ng-click="reset(); tab4 = !tab4">New Features1</li>
+                    <li class="navbarLi" ng-click="reset(); tab4 = !tab4">Wildlife</li>
                     <li class="navbarLi" ng-click="reset(); tab5 = !tab5">New Features2</li>
                   </ul>
                 </div>
@@ -103,8 +105,8 @@
                 <div id="featureContent3" ng-show="tab3">
                   <h3>Just a place holder for your awesome contents3</h3> 
                 </div>
-                <div id="featureContent4" ng-show="tab4">
-                  <h3>Just a place holder for your awesome contents4</h3> 
+                <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
+                  <div ng-bind-html="textArea"></div>  
                 </div>
                 <div id="featureContent5" ng-show="tab5">
                   <h3>Just a place holder for your awesome contents5</h3> 
@@ -116,3 +118,15 @@
     </div>
   </body>
 </html>
+
+ 
+
+<script>
+  $( "body" ).on( "click", ".speciesTitle",function() {
+    var currentSpecies = $(this).text().trim();
+    $(".AllAnimals[species!='"+currentSpecies+"']").hide(); 
+    $(".AllAnimals[species='"+currentSpecies+"']").show(); 
+
+});
+</script>
+ 
