(species) add in species, styles, ngsanitize, bower.json additgion

--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
                   </ul>
                 </div>
               </div>
-              <div id="mapHolder">
+              <div id="mapHolder" ngcontroller="mapsController">
                 <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
                 
@@ -118,7 +118,6 @@
     </div>
   </body>
 </html>
-
 <script>
   $( "body" ).on( "click", ".speciesTitle",function() {
     var currentSpecies = $(this).text().trim();
@@ -132,5 +131,5 @@
       $(".AllAnimals[species!='"+currentSpecies+"']").hide(); 
       $(".AllAnimals[species='"+currentSpecies+"']").show(); 
     }
-  });
+});
 </script>
