--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
                 <div id="filterContent" >
                   <ul ng-repeat="loc in locations track by $index"> <!-- sort by distance then rating-->
                     <li class="filteredItem">
-                      <div ng-click = "rerenderAll(loc.latlng.lat, loc.latlng.lng)" lat={{loc.latlng.lat}} lng={{loc.latlng.lng}}>{{$index + 1}}. <strong>{{loc.name}}</strong></div>
+                      <div ng-click = "rerenderAll(loc.latlng.lat, loc.latlng.lng, loc.name)" lat={{loc.latlng.lat}} lng={{loc.latlng.lng}}>{{$index + 1}}. <strong>{{loc.name}}</strong></div>
                       <div>{{loc.vicinity}}</div>
                       <div>Rating: {{loc.rating}}</div>
                     </li>
@@ -69,13 +69,12 @@
             </div>
               <div id="tabContainer" ng-controller="toggleNavbarController">
                 <div id="navbar">
-                  <ul id="navbarUl">
-                    <li class="navbarLi" ng-click="reset(); tab1 = !tab1">Current Weathers</li>
-                    <li class="navbarLi" ng-click="reset(); tab2 = !tab2">Forecast</li>
-                    <li class="navbarLi" ng-click="reset(); tab3 = !tab3">Reviews</li>
-                    <li class="navbarLi" ng-click="reset(); tab4 = !tab4">Wildlife</li>
-                    <li class="navbarLi" ng-click="reset(); tab5 = !tab5">New Features2</li>
-                  </ul>
+                  <div id="navbarUl">
+                    <span class="navbarLi" ng-click="reset(); tab1 = !tab1">Current Weathers</span>
+                    <span class="navbarLi" ng-click="reset(); tab2 = !tab2">Forecast</span>
+                    <span class="navbarLi" ng-click="reset(); tab3 = !tab3">Reviews</span>
+                    <span class="navbarLi" ng-click="reset(); tab4 = !tab4">Wildlife</span>
+                  </div>
                 </div>
                 <div id="weather" ng-controller="weatherController" ng-show="tab1">
                     <div class="today">
@@ -96,6 +95,7 @@
                         <span class="forcastedDescription"></span>
                       </div>
                     </div>
+                  </div>
                 <div id="featureContent1"  ng-show="tab1">
                   <h3>Just a place holder for your awesome contents3</h3> 
                 </div>
@@ -108,11 +108,10 @@
                 <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
                   <div ng-bind-html="textArea"></div>  
                 </div>
-
                 <div id="featureContent5" ng-show="tab5">
                   <h3>Just a place holder for your awesome contents5</h3> 
                 </div>
-             </div>
+             
           </span>
 
         </div>
@@ -122,7 +121,6 @@
 </html>
 <script>
   $( "body" ).on( "click", ".speciesTitle",function() {
-
     var currentSpecies = $(this).text().trim();
     if($(this).attr("active") == "true"){
       $(".AllAnimals[species='"+currentSpecies+"']").hide();
