edits design changes from dianas list, 3 done so far

--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,7 @@
         </span>
         <span id="totalDisplayContainer">
           <div id="descriptionContainer" ng-controller="descriptionController">
-            <p id="parkName">Yosemite National Park</p>
+            <p id="parkName">{{parkName}}</p>
             <div id="descriptionContent">{{description}}</div>
           </div>
           <div id="tabContainer" ng-controller="toggleNavbarController">
