--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
   <script src='app/description/description.js'></script>
   <script src="app/services/services.js"></script>
   <script src="app/species/species.js"></script>
+  <script src="app/campgrounds/campgrounds.js"></script>
   <script src="assets/park_category.js"></script>
   <script src="app/weather/weather.js"></script>
 
@@ -74,6 +75,7 @@
                 <span class="navbarLi" ng-click="reset(); tab2 = !tab2">Forecast</span>
                 <span class="navbarLi" ng-click="reset(); tab3 = !tab3">Reviews</span>
                 <span class="navbarLi" ng-click="reset(); tab4 = !tab4">Wildlife</span>
+				<span class="navbarLi" ng-click="reset(); tab5 = !tab5">Campgrounds</span>
               </div>
             </div>
             <div id="weather" ng-controller="weatherController" ng-show="tab1">
@@ -105,8 +107,11 @@
             <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
               <div ng-bind-html="textArea"></div>  
             </div>
-            <div id="featureContent5" ng-show="tab5">
-              <h3>Just a place holder for your awesome contents5</h3> 
+            <div id="campgrounds" ng-controller="campgroundsController" ng-show="tab5">
+			  <div id="campgroundsTitle"> Campground Amenities: </div>
+			  <div ng-repeat="info in campgroundinfo">
+				<span> {{info.name}} </span>
+			  </div>  
             </div>
           </div>
         </span>
