--- a/client/index.html
+++ b/client/index.html
@@ -30,120 +30,111 @@
 </head>
 
 <body>
-
-    <div ng-controller="homescreenController">
-        <div ng-hide="searchStatus">
-            <div id="popup">
-                <div id="searchBox">
-                    <label>Search For Park By Location or Name</label>
-                    <input id="location" type="text" name="searchText" value="Mission Dolores Park" ng-model="searched" placeholder="ex: San Francisco, CA or Yosemite">
-                    <button id="searchButton" ng-click="submitSearch(searched)">Search</button>
-                </div>
-            </div>
+  <div ng-controller="homescreenController">
+    <div ng-hide="searchStatus">
+      <div id="popup">
+        <div id="searchBox">
+          <label>Search For Park By Location or Name</label>
+          <input id="location" type="text" name="searchText" value="Mission Dolores Park" ng-model="searched" placeholder="ex: San Francisco, CA or Yosemite">
+          <button id="searchButton" ng-click="submitSearch(searched)">Search</button>
         </div>
-        <div ng-show="searchStatus" id="detailDisplay">
-            <span id="logo"> <img src="assets/logo.png"/> </span>
-            <div id="totalContainer">
-                <span id="filterMapContainer" ng-controller="filterController">
-          <div id="filterContainer" > <!--Removed Dash from NG_controller-->
-            <div id="filterTitle">
-              <p>{{searchText}}</p>
-            </div>
-            <div id="filterContent" >
-              <ul ng-repeat="loc in locations track by $index"> <!-- sort by distance then rating-->
-                <li >
-                  <div  ng-class="{ 'filteredItemActive': $index == selectedIndex }" class="filteredItem" ng-click = "rerenderAll( $index, loc.latlng.lat, loc.latlng.lng, loc.name)" lat={{loc.latlng.lat}} lng={{loc.latlng.lng}}>{{$index + 1}}. <strong>{{loc.name}}</strong>
-                    <div>{{loc.vicinity}}</div>
-                    <div>Rating: {{loc.rating}}</div>
-                  </div>
-                </li>
-              </ul>
-            </div>
+      </div>
+    </div>
+    <div ng-show="searchStatus" id="detailDisplay">
+    <span id="logo"> <img src="assets/logo.png"/> </span>
+    <img id="logoImage" src="assets/lion.png" />
+    <div id="totalContainer">
+      <span id="filterMapContainer" ng-controller="filterController">
+        <div id="filterContainer"> <!--Removed Dash from NG_controller-->
+          <div id="filterTitle">
+            <p>{{searchText}}</p>
           </div>
+          <div id="filterContent" >
+            <ul ng-repeat="loc in locations track by $index"> <!-- sort by distance then rating-->
+              <li>
+                <div  ng-class="{ 'filteredItemActive': $index == selectedIndex }" class="filteredItem" ng-click = "rerenderAll( $index, loc.latlng.lat, loc.latlng.lng, loc.name)" lat={{loc.latlng.lat}} lng={{loc.latlng.lng}}>{{$index + 1}}. <strong>{{loc.name}}</strong>
+                  <div>{{loc.vicinity}}</div>
+                  <div>Rating: {{loc.rating}}</div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
           <div id="mapHolder" ngcontroller="mapsController">
             <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
-                <div id="map" class="smallMap"></div>
-            </div>
-            </span>
-            <span id="totalDisplayContainer">
-          <div id="descriptionContainer" ng-controller="descriptionController">
-            <p id="parkName">{{parkName}}</p>
-            <div  id="descriptionContent">{{description}}</div>
+            <div id="map" class="smallMap"></div>
           </div>
-          <div id="tabContainer" ng-controller="toggleNavbarController">
-            <div id="navbar">
-              <div id="navbarUl">
-                <span ng-class="{ 'navbarLiSelected': tab1 }" class="navbarLi" ng-click="reset(); tab1 = !tab1">Current Weathers</span>
-                <span ng-class="{ 'navbarLiSelected': tab3 }" class="navbarLi" ng-click="reset(); tab3 = !tab3">Reviews</span>
-                <span ng-class="{ 'navbarLiSelected': tab4 }" class="navbarLi" ng-click="reset(); tab4 = !tab4">Wildlife</span>
-				<span ng-class="{ 'navbarLiSelected': tab5 }" class="navbarLi" ng-click="reset(); tab5 = !tab5">Campgrounds</span>
-              </div>
-            </div>
-            <div id="tabContentHolder">
-            <div id="weather" ng-controller="weatherController" ng-show="tab1">
-              <div class="today">
-                <div id="details">
-                  <span id="currTemp">Current Temp: {{todaysWeather.currTemp}}</span>
-                  <span id="todayDescription">{{todaysWeather.description}}</span>
-                  <img id="todaysWeatherIcon" src={{todaysWeather.iconLink}}>
-                  <span id="todayMax">Max: {{todaysWeather.highTemp}}</span>
-                  <span id="todayMin">Min: {{todaysWeather.lowTemp}}</span>
+        </span>
+        <span id="totalDisplayContainer">
+          <div id="descriptionContainer" ng-controller="descriptionController">
+                  <p id="parkName">{{parkName}}</p>
+                  <div  id="descriptionContent">{{description}}</div>
+          </div>
+            <div id="tabContainer" ng-controller="toggleNavbarController">
+              <div id="navbar">
+                <div id="navbarUl">
+                  <span ng-class="{ 'navbarLiSelected': tab1 }" class="navbarLi" ng-click="reset(); tab1 = !tab1">Current Weathers</span>
+                  <span ng-class="{ 'navbarLiSelected': tab3 }" class="navbarLi" ng-click="reset(); tab3 = !tab3">Reviews</span>
+                  <span ng-class="{ 'navbarLiSelected': tab4 }" class="navbarLi" ng-click="reset(); tab4 = !tab4">Wildlife</span>
+                  <span ng-class="{ 'navbarLiSelected': tab5 }" class="navbarLi" ng-click="reset(); tab5 = !tab5">Campgrounds</span>
                 </div>
               </div>
-              <div id="sevenDayforcast" ng-repeat="day in sevenDayForecast">
-                <div>
-                  <span class="forecastDate">{{day.date}}</span>
-                  <img class="forecastIcon" src={{day.iconLink}}>
-                  <span class="forcastedHigh">High: {{day.highTemp}}</span>
-                  <span class="forcastedLow">Low: {{day.lowTemp}}</span>
-                  <span class="forcastedDescription"></span>
+              <div id="tabContentHolder">
+                <div id="weather" ng-controller="weatherController" ng-show="tab1">
+                    <div class="today">
+                      <div id="details">
+                        <span id="currTemp">Current Temp: {{todaysWeather.currTemp}}</span>
+                        <span id="todayDescription">{{todaysWeather.description}}</span>
+                        <img id="todaysWeatherIcon" src={{todaysWeather.iconLink}}/>
+                        <span id="todayMax">Max: {{todaysWeather.highTemp}}</span>
+                        <span id="todayMin">Min: {{todaysWeather.lowTemp}}</span>
+                      </div>
+                    </div>
+                  <div id="sevenDayforcast" ng-repeat="day in sevenDayForecast">
+                    <div>
+                      <span class="forecastDate">{{day.date}}</span>
+                      <img class="forecastIcon" src={{day.iconLink}}/>
+                      <span class="forcastedHigh">High: {{day.highTemp}}</span>
+                      <span class="forcastedLow">Low: {{day.lowTemp}}</span>
+                      <span class="forcastedDescription"></span>
+                    </div>
+                  </div>
+                </div>
+                <div id="featureContent2" ng-show="tab2">
+                  <h3>Just a place holder for your awesome contents2</h3>
+                </div>
+                <div id="featureContent3" ng-show="tab3">
+                  <h3>Just a place holder for your awesome contents3</h3>
+                </div>
+                <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
+                    <div ng-bind-html="textArea"></div>
+                </div>
+                <div id="campgrounds" ng-controller="campgroundsController" ng-show="tab5">
+                  <div id="campgroundsTitle"> Campground Amenities: </div>
+                  <div ng-show="hideCampgrounds">
+                    No campgrounds found!
+                  </div>
+                  <div ng-hide="hideCampgrounds">
+                  <div> <strong>Name:</strong> -{{name}} </div>
+                  <div> <strong>Contact:</strong>- 
+                    <div ng-repeat="info in contact" ng-show="!hideCampgrounds">
+                      <span>{{info.name}}</span>-[<span> {{info.number}}</span>]
+                    </div> 
+                  </div>
+                  <div> <strong>Description:</strong>- {{description}} </div>
+                  <div id="campgroundsTitle"> Campground Amenities: </div>
+                  <div ng-repeat="info in campgroundinfo" ng-show="!hideCampgrounds">
+                    <span> {{info.name}} </span>
+                  </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div id="featureContent2" ng-show="tab2">
-              <h3>Just a place holder for your awesome contents2</h3>
-            </div>
-            <div id="featureContent3" ng-show="tab3">
-              <h3>Just a place holder for your awesome contents3</h3> 
-            </div>
-            <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
-              <div ng-bind-html="textArea"></div>  
-            </div>
-            <div id="campgrounds" ng-controller="campgroundsController" ng-show="tab5">
-			  <div id="campgroundsTitle"> Campground Amenities: </div>
-			  <div ng-show="hideCampgrounds">
-			  No campgrounds found!
-			  </div>
-			  <div ng-repeat="info in campgroundinfo" ng-show="!hideCampgrounds">
-				<span> {{info.name}} </span>
-			  </div>  
-
-            </div>
-            </div>
+          </span>
         </div>
-    </div>
-    <div id="featureContent2" ng-show="tab2">
-        <h3>Just a place holder for your awesome contents2</h3>
-    </div>
-    <div id="featureContent3" ng-show="tab3">
-        <h3>Just a place holder for your awesome contents3</h3>
-    </div>
-    <div id="featureContent4" ng-controller="speciesController" ng-show="tab4">
-        <div ng-bind-html="textArea"></div>
-    </div>
-    <div id="campgrounds" ng-controller="campgroundsController" ng-show="tab5">
-        <div id="campgroundsTitle"> Campground Amenities: </div>
-        <div ng-repeat="info in campgroundinfo">
-            <span> {{info.name}} </span>
-        </div>
-    </div>
-    </div>
-    </span>
-    </div>
-    </div>
-    </div>
+      </div>
+  </div>
 </body>
-
 </html>
 <script>
     $("body").on("click", ".speciesTitle", function() {
